# reranking_multimodal_data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  STATUS.md  article_final.md  download_all.py  get_all_folder_ids.py  pyproject.toml  requirements.txt  run.py  test_e5_load.py  test_rag.py  test_tensorflow_e5.py  test_vscode.py  teste5.py
archive/: README.md
docs/: abstract.md  abstract_notes.md  archive_candidates.md  article_update_adaptive_reranking_report.md  bibliography_audit.md  conclusions.md  conclusions_notes.md  discussion.md  discussion_notes.md  docbench_literature_review.md  docbench_sota_table.md  experiments.md  experiments_notes.md  experiments_revision_notes.md  external_baselines_review.md  external_baselines_table.md  final_review.md  final_review_v2.md  introduction.md  keywords.md  literature_comparison_for_article.md  literature_comparison_for_defense.md  method.md  method_notes.md  novelty_check_multimodal_reranking.md  paper_materials.md  publication_plan.md  readme_revision_report.md  related_work.md  related_work_revision_notes.md  repositioning_notes.md  repository_cleanup_report.md  reranker_improvement_audit.md  retrieval_audit_2026-05-10.md  success_criteria.md
paper_ieee/: ieee_build_report.md  paper.tex  references.bib
scripts/: analyze_vlm_errors_clean.py  annotate_domains.py  audit_dehub_retrieval.py  audit_docbench_alignment.py  audit_document_routing.py  audit_hubness.py  audit_index_forensics.py  audit_metadata_shift.py  audit_qwen3_docapi_clean_retrieval.py  audit_qwen3_tile_quality_clean.py  build_colvision_index_clean.py  build_docbench_bm25_index.py  build_docbench_text_encoder_index.py  build_experiment_summary_tables.py  build_index_qwen3_v2.py  build_nemotron_image_index_clean.py  build_page_index.py  build_page_index_validated.py  build_qwen3_tile_index_clean.py  diagnose_all.py  diagnose_rag.py  diagnose_retrieval.py  diagnose_vlm_failure_modes_clean.py  evaluate.py  evaluate_colvision_index_clean.py  evaluate_docbench_hybrid_bm25.py  evaluate_full_pipeline_layout_aware_clean.py  evaluate_problematic.py  evaluate_problematic_v1.py  evaluate_qwen3_docapi_index_clean.py  evaluate_rag.py  evaluate_rag_v2.py  evaluate_retrieval.py  evaluate_text_reranker_308.py  evaluate_vlm_from_page_candidates_clean.py  export_colvision_candidates_clean.py  extract_docbench_caption_table_text.py  extract_docbench_ocr.py  full_pipeline.py  (+17 more)
(+193 files in other folders)
