[project]
name = "reranking-multimodal-data"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-select = ["I"]
ignore = ["E203"]
fix = true

[tool.ruff.lint]
select = ["E","F","I","B","W","UP","S","RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict = false

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
