[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reranking-multimodal-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.122.0",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "rank-bm25>=0.2.2",
    "nltk>=3.8.0",
    "pymorphy3>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
rag-server = "src.api.server:main"
rag-loader = "src.pipeline.dataset_loader:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-select = ["I"]
ignore = ["E203"]
fix = true

[tool.ruff.lint]
select = ["E","F","I","B","W","UP","S","RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict = false

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
